[tool.poetry]
name = "bigqlite"
version = "0.1.0"
description = ""
authors = ["Gigi Sayfan <the.gigi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sh = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
